--- a/package.json
+++ b/package.json
@@ -41,19 +41,15 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@supabase/supabase-js": "^2.50.0",
     "@tanstack/react-query": "^5.56.2",
-    "@types/react-pdf": "^7.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
-    "fontkit": "^2.0.4",
     "input-otp": "^1.2.4",
-    "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "pdf-lib": "^1.17.1",
-    "pdfjs-dist": "^4.8.69",
+    "pdfmake": "^0.2.12",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
