--- a/package.json
+++ b/package.json
@@ -47,16 +47,15 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
-    "jspdf": "^3.0.1",
+    "jspdf": "^2.5.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "pdf-lib": "^1.17.1",
-    "pdfmake": "^0.2.20",
+    "pdfjs-dist": "^3.11.174",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
-    "react-pdf": "^9.2.1",
+    "react-pdf": "^7.7.1",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
